# balans

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
crates/server/: Cargo.toml
crates/server/migrations/: 001_initial.sql  002_phase5.sql  003_auth.sql  004_assets.sql  005_user_management.sql  006_voucher_attachments.sql  007_directors_report_texts.sql
crates/server/src/: access.rs  config.rs  error.rs  main.rs  money.rs  validation.rs
crates/server/src/assets/: depreciation.rs  mod.rs  models.rs
crates/server/src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs  routes.rs
crates/server/src/db/: audit.rs  mod.rs  seed.rs
crates/server/src/filing/: api.rs  ixbrl.rs  mod.rs
crates/server/src/k2/: closing.rs  eligibility.rs  mod.rs  validation.rs
crates/server/src/models/: account.rs  attachment.rs  company.rs  fiscal_year.rs  mod.rs  voucher.rs
crates/server/src/report/: annual_report.rs  balance_sheet.rs  income_statement.rs  mod.rs  multi_year.rs  notes.rs  pdf.rs
crates/server/src/routes/: accounts.rs  admin.rs  annual_report.rs  assets.rs  attachments.rs  closing.rs  companies.rs  compliance.rs  filing.rs  fiscal_years.rs  mod.rs  reports.rs  sie.rs  tax.rs  vouchers.rs
crates/server/src/sie/: encoding.rs  mod.rs  parser.rs  types.rs  writer.rs
crates/server/src/tax/: ink2.rs  mod.rs  sru.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/auth/: context.tsx
(+17 files in other folders)
